Make hover effect for variants more discreet
Additionally, prevent drag handle from being cut off when in topmost
position while metadata or citation is open.

--- a/app/styles/blocks/variant.scss
+++ b/app/styles/blocks/variant.scss
@@ -12,8 +12,7 @@
   right: ($g / 2);
 
   &.-hover {
-    background: $link-hover-color;
-    color: auto-color($link-hover-color);
+    color: $link-color;
   }
 
   &.-highlight {
