--- a/app/styles/blocks/drag-handle.scss
+++ b/app/styles/blocks/drag-handle.scss
@@ -1,8 +1,8 @@
 $drag-handle-height: 3.5 * $u !default; // no unit
 
 .drag-handle {
+  bottom: 0;
   cursor: ew-resize;
-  height: 100%;
   margin-left: (-$g / 4);
   padding: ($g / 2) 0;
   position: absolute;
