Make persistent URL input read-only

--- a/app/templates/components/letter-citation.hbs
+++ b/app/templates/components/letter-citation.hbs
@@ -8,7 +8,7 @@
   {{!TODO: Translate}}
   <p>Hrsg. v. Berlin-Brandenburgischen Akademie der Wissenschaften / Akademie der Wissenschaften zu Göttingen</p>
   <h3 class="citation_sub-heading">{{t 'permaLink'}}</h3>
-  <input class="citation_input" type="url" value="{{content.brief_url}}">
+  <input class="citation_input" type="url" value="{{content.brief_url}}" readonly>
 
   {{yield}}
 </aside>
