Add lane headers
Dynamically set header content depending on lane type. Make sure translation
is up to date when adding more types.

Add a general lane template and load the actual display component from inside this
template instead of letting the parent controller handling templates.

Make popup styles more reusable by adding an extend.

Includes prelimiary actions for lane type switching which will be implemented
at a later stage.

Related to: ADWD-1967

--- a/app/styles/blocks/lane.scss
+++ b/app/styles/blocks/lane.scss
@@ -12,3 +12,10 @@
     display: none;
   }
 }
+
+.lane_header {
+  background: $shade;
+  margin: (-$g / 2) (-$g / 2) $g;
+  padding: ($g / 2);
+  text-align: center;
+}
