--- a/app/templates/letter.hbs
+++ b/app/templates/letter.hbs
@@ -30,7 +30,7 @@
             </nav>
           </div>
 
-          {{letter-lane lane=lane content=content}}
+          {{letter-lane lane=lane content=content laneTypes=laneTypes}}
 
         {{/each}}
 
