--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,6 +22,7 @@
 @import 'mixins/typo-scale';
 
 @import 'extends/header-aside';
+@import 'extends/popup';
 
 @import 'util/base';
 @import 'util/modifiers';
@@ -31,6 +32,7 @@
 @import 'blocks/drag-handle';
 @import 'blocks/header';
 @import 'blocks/lane';
+@import 'blocks/lane-type-select';
 @import 'blocks/main';
 @import 'blocks/metadata';
 @import 'blocks/nav';
