--- a/app/styles/blocks/symbols.scss
+++ b/app/styles/blocks/symbols.scss
@@ -1,22 +1,54 @@
+//Das hier muss als Mixin gestaltet werden,
+// da die anderen davon erben werden:
 .symbol {
-  padding-left: 0.1em;
-  padding-right: 0.1em;
   font-style: italic;
+
+  &.-unicode {
+    font-family: fontello;
+  }
+  &.-border-top {
+    border-top: 1px solid $text-color;
+    padding-top: 2px;
+  }
+  &.-border-bottom {
+    border-bottom: 1px solid $text-color;
+    padding: 2px;
+    font-size: 80%;
+  }
+  &.-border-left {
+    border-left: 1px solid $text-color;
+    padding: 2px;
+  }
+  &.-border-right {
+    border-right: 1px solid $text-color;
+    padding: 2px;
+  }
+  &.-sup {
+    position: relative;
+    top: -0.7em;
+    vertical-align: super;
+    margin-left: -0.7em;
+    font-size: 80%;
+  }
+  &.-small-rectangle {
+    width: 0.7em;
+    height: 0.7em;
+    display: inline-block;
+    border: 1px solid $text-color;
+  }
+  &.-big-rectangle {
+    width: 1em;
+    height: 0.7em;
+    display: inline-block;
+    border: 1px solid $text-color;
+  }
 }
 
-.symbol.border-top {
-  border-top: 1px solid $text-color;
-}
-.symbol.border-bottom {
-  border-bottom: 1px solid $text-color;
-  font-size: 95%;
-  line-height: +2px;
-  vertical-align: +2px;
-  padding-bottom: 2px;
-}
-.symbol.border-left {
-  border-left: 1px solid $text-color;
-}
-.symbol.border-right {
-  border-right: 1px solid $text-color;
+.symbol_sub {
+    border-top: 1px solid $text-color;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    display: inline-block;
+    line-height: 1.4em;
+    margin-left: -1.5em;
 }
