Change labels, show hints for uncertain dates
- Change labels (and filenames) as requested
- Show hints for dates if uncertain or added by the editor
- Rename some style blocks to match naming scheme

Resolves: ADWD-1970

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,13 +32,13 @@
 @import 'blocks/drag-handle';
 @import 'blocks/header';
 @import 'blocks/lane';
-@import 'blocks/lane-type-select';
 @import 'blocks/main';
 @import 'blocks/metadata';
 @import 'blocks/nav';
 @import 'blocks/pop-up';
+@import 'blocks/select-lane-type';
 @import 'blocks/sidebar';
-@import 'blocks/symbols';
+@import 'blocks/symbol';
 @import 'blocks/top-bar';
 @import 'blocks/transcript';
 @import 'blocks/variant';
