--- a/app/templates/components/lane-variants.hbs
+++ b/app/templates/components/lane-variants.hbs
@@ -3,7 +3,7 @@
 
     {{{variant.text_schnipsel}}}
 
-    <span class="variant_type {{if (eq variant.type 'addition') '-dark'}}">
+    <span class="variant_type {{if (eq variant.type 'note') '-dark'}}">
       {{t variant.type}}
     </span>
   </div>
