Add colors for variants
- Create variant colors from base color by rotating hue
- Change header colors for better consistency

Related to: ADWD-1950

--- a/app/styles/extends/header-aside.scss
+++ b/app/styles/extends/header-aside.scss
@@ -1,6 +1,6 @@
 %header-aside {
   @include border(top);
-  background: $highlight-color;
+  background-color: $aside-bg-color;
   clear: both;
   display: none;
   padding: ($g / 2);
