--- a/app/styles/util/settings.scss
+++ b/app/styles/util/settings.scss
@@ -1,11 +1,11 @@
-// Colors
+// Base colors
 $alpha-color: #c90230;
 $black: #000;
 $white: #fff;
 $shade: rgba($black, .06);
 $shade-dark: rgba($black, .6);
 
-// Named colors
+// Semantic colors
 $border-color: #ccc;
 $border-color-dark: #aaa;
 $link-color: $alpha-color;
@@ -15,6 +15,15 @@ $text-color: #444;
 $text-color-light: #888;
 $disabled-color: tint($text-color, 60);
 $highlight-color: shade($white, 5);
+$aside-bg-color: rgba(#000, .06);
+
+// Variant colors
+$variant-colors-count: 7;
+$variant-colors-hue-step: 360 / ($variant-colors-count + 1);
+$variant-colors: ();
+@for $i from 1 through $variant-colors-count {
+  $variant-colors: join($variant-colors, adjust-hue($alpha-color, 360 - $i * $variant-colors-hue-step));
+}
 
 // Dimensions
 $ratio: 1.41;
