Add reference styles to account for new image markup
New ember-cli patch version requires dependencies to be updated,
run `npm install` and `bower install`. Changed tests to work with new
ember-cli and ember-intl.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,6 @@
 // TODO: Find a way to glob-import mixins and blocks
 
-@import 'bower_components/reset-css/reset';
+@import 'bower_components/reset-css/_reset'; // Underscore is required to distinguish from reset.css
 @import 'bower_components/spinners/stylesheets/spinners';
 @import 'vendor/entypo-plus';
 
