--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,6 @@
 // TODO: Find a way to glob-import mixins and blocks
 
 @import 'bower_components/reset-css/_reset'; // Underscore is required to distinguish from reset.css
-@import 'bower_components/spinners/stylesheets/spinners';
 @import 'vendor/entypo-plus';
 
 @import 'util/functions';
@@ -23,6 +22,7 @@
 
 @import 'extends/header-aside';
 @import 'extends/popup';
+@import 'extends/spinner';
 
 @import 'util/base';
 @import 'util/modifiers';
