--- a/public/assets/fontello/css/fontello-codes.css
+++ b/public/assets/fontello/css/fontello-codes.css
@@ -1,6 +1,6 @@
 
-.icon-inkskape-keisbogen:before { content: '\e800'; } /* '' */
 .icon-inkscape-ligatss:before { content: '\e801'; } /* '' */
 .icon-inkscape-linfty:before { content: '\e802'; } /* '' */
 .icon-inkscape-propto-180:before { content: '\e803'; } /* '' */
 .icon-inkscape-ligatou:before { content: '\e804'; } /* '' */
+.icon-inkscape-arch-between:before { content: '\e805'; } /* '' */
