Colorize variants and allow them to be toggled
- Add auto-generated colors for textual witnesses and associated variants
- Allow variants of be switched on and off based on witness
- Fade in variants to prevent all of them from appearing cobbled together on startup
- Slightly increase variants re-render timeout for better reponsiveness
- Split up letter route into more functions
- Add test helpers allowing for much shorter integration tests
- Code cleanups

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,8 @@
 @import 'extends/header-aside';
 @import 'extends/popup';
 @import 'extends/spinner';
+@import 'extends/variant-backgrounds';
+@import 'extends/variant-colors';
 
 @import 'util/base';
 @import 'util/modifiers';
