--- a/app/templates/components/letter-lane.hbs
+++ b/app/templates/components/letter-lane.hbs
@@ -19,6 +19,6 @@
   </div>
 </header>
 
-{{component (concat 'lane-' lane.type) content=content}}
+{{component (concat 'lane-' lane.type) content=content positionVariants='positionVariants'}}
 
 {{yield}}
