Improve variants, search, layout and verboseness
Variants:
- Change variant colors
- Add info popup to variant toggle buttons
- Add toggle button for notes and variants without witnesses

Layout and design improvements:
- Move search to header
- Change text input styles
- Improve size calculation of popups
- Make sure lanes always fill the whole viewport even if content does not
- Harmonize button styles
- Delay popups only on mouse in, not on mouse out
- Clean up styles

Misc:
- Display error (instead of blank page) if Solr does not respond
- Remove unused minimized lanes
- Change request method for res doctae search from POST to GET
- Fix display of header data for attachments
- Only convert letter links to Ember transitions, leave external links alone

Related to: ADWD-1824, ADWD-1970

--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -57,13 +57,15 @@
   display: inline-block;
 }
 
+.header_date {
+  white-space: nowrap;
+}
+
 .header_step {
   @include button('shady');
-  user-select: none;
 
   @include hover {
     background: $shade;
-    box-shadow: 0 0 $border-width $border-color inset;
   }
 
   &.-prev {
