--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@
 @import 'mixins/icon';
 @import 'mixins/link-border-on-hover';
 @import 'mixins/link-border';
+@import 'mixins/placeholder-color';
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
