--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,10 @@
   <div class="top-bar">
     <a href="{{! TODO}}" class="top-bar_title">{{t 'leibnizLetters'}}</a>
     <button class="top-bar_toggle-nav" {{action 'toggleNav'}}>{{t 'menu'}}</button>
+    <form class="top-bar_search" action="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/discover" method="get">
+      <input type="text" class="top-bar_search-input" name="query" placeholder="{{t 'search'}}">
+      <button type="submit" class="top-bar_search-submit"><div class="sr-only">{{t 'search'}}</div></button>
+    </form>
   </div>
 
   {{outlet 'letter'}}
