--- a/app/styles/blocks/lane.scss
+++ b/app/styles/blocks/lane.scss
@@ -4,7 +4,7 @@
   position: relative;
   vertical-align: top;
 
-  & + & {
+  &:nth-child(n+2) {
     border-left: $border-width $border-style $border-color;
   }
 }
